Added three funny yet instructive exercises
plus minor corrections

--- a/102_controlflow.ipynb
+++ b/102_controlflow.ipynb
@@ -353,9 +353,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Kleine Exkursion für Interessierte** (an dieser Stelle aber nicht super wichtig...): Stelle dir vor, du erstellst eine riesengroße Liste in Python. Zum Beispiel bist du Neurowissenschaftler:in und du speicherst fMRI-Experiment-Daten (eine spezielle Form der Hirn-Magnetresonanztomografie) in einer Pythonliste namens `mrt_1`. Dabei kommt eine gigantische Menge an Daten zusammen, nicht selten mehrere Gigabyte. Oft macht es aus in einem Computerprogrmam Sinn, Variablen zu kopieren (in die Liste `mrt_2`, damit wir das Programm besser strukturieren können. Das würde aber bedeuten, dass für jeder neuen Kopie einige GB im Arbeitsspeicher hin- und hergeschoben werden müssen, was lange dauert und zusätzlichen Speicherplatz benötigt. Deshalb ist Python \"schlau\" und erzeugt nur eine neue _Referenz_ für die Variable. D.h. es gibt einen zusätzlichen Variablennamen, der aber auf die selben Seicherzellen der ursprünglichen Liste zeigt. Das bedeutet aber, dass wenn du `mrt_2` änderst, änderst sich natürlich auch `mrt_1`. Manchmal will man aber eine \"richtige\" Kopie eines Objekts erzeugen (im Programmiersprech nennen wir das _deepcopy_), d.h. der Wert einer Variablen wird tatsächlich in andere Speicherzellen kopiert. Z.B., wenn Du die orginalen Rohdaten behalten und auf Kopie einen Filter anwenden willst. Um die beiden Fälle zu unterscheiden (denn einer Variablen sieht man nicht an, ob sie eine Referenz auf eine andere Variable darstellt), braucht man den `is`-Operator.\n",
+    "> **Kleine Exkursion für Interessierte** (an dieser Stelle aber nicht super wichtig...): Stelle dir vor, du erstellst eine riesengroße Liste in Python. Zum Beispiel bist du Neurowissenschaftler:in und du speicherst fMRI-Experiment-Daten (eine spezielle Form der Hirn-Magnetresonanztomografie) in einer Pythonliste namens `mrt_1`. Dabei kommt eine gigantische Menge an Daten zusammen, nicht selten mehrere Gigabyte. Oft macht es in einem Computerprogrmam Sinn, Variablen zu kopieren (in diesem Fall in die Liste `mrt_2`), damit wir das Programm besser strukturieren können. Das würde aber bedeuten, dass für jede neue Kopie einige GB im Arbeitsspeicher hin- und hergeschoben werden müssen, was lange dauert und zusätzlichen Speicherplatz benötigt. Deshalb ist Python \"schlau\" und erzeugt nur eine neue _Referenz_ für die Variable. D.h. es gibt einen zusätzlichen Variablennamen, der aber auf die selben Seicherzellen der ursprünglichen Liste zeigt. Das bedeutet aber, dass wenn du `mrt_2` änderst, änderst sich natürlich auch `mrt_1`. Manchmal will man aber eine \"richtige\" Kopie eines Objekts erzeugen (im Programmiersprech nennen wir das _deepcopy_), d.h. der Wert einer Variablen wird tatsächlich in andere Speicherzellen kopiert. Beispielsweise sollen die orginalen Rohdaten behalten und auf einer Kopie Filter angewendet werden. Um die beiden Fälle zu unterscheiden (denn einer Variablen sieht man nicht an, ob sie eine Referenz auf eine andere Variable darstellt), braucht man den `is`-Operator.\n",
     "\n",
-    "**PS:** Dieses Verhalten von Python ist nicht selten Quelle für wundere Bugs, die schwer zu finden sind (frag da mal deine KL... )"
+    "**PS:** Dieses Verhalten von Python ist nicht selten Quelle für \"wunderbare\" Bugs, die schwer zu finden sind (frag da mal deine KL... )"
    ]
   },
   {
@@ -700,8 +700,115 @@
    "metadata": {},
    "source": [
     "---\n",
+    "## Aufgabe 4 - Flowchart\n",
     "\n",
-    "Du kannst jetzt Programme in Python schreiben, die dir etwas ausrechnen! Lerne in der nächsten Lektion, wie du Code als \"Bausteine\" deines Programms in _Funktionen_ verpackst. Für viele Probleme gibt es schon Funktionen und du musst sie nur aus _Modulen_ laden.\n",
+    "Implementiere dieses (nicht so ganz ernst gemeinte 😉) \"engineering flowchart\" in Python.\n",
+    "![](https://i.pinimg.com/originals/e8/c2/d9/e8c2d940a3c253d57d3a6cdddc916168.jpg)\n",
+    "\n",
+    "Für den Anfang bekommst du ein kleines Grundgerüst, das du an den gekennzeichneten Stellen vervollständigen sollst.\n",
+    ">**Tipp:** Mit der Funktion `input()` kannst du eine Konsoleneingabe des Benutzers einlesen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Engineering flowchart\")\n",
+    "inp_1 = input(\"Does it move?\")\n",
+    "\n",
+    "if inp_1 == \"yes\":\n",
+    "    inp_2 = input(\"Should it?\")\n",
+    "    if inp_2 == \"no\":\n",
+    "        print(\"No Problem!\")\n",
+    "    elif inp_2 == \"yes\":\n",
+    "        pass  # remove the pass and write your own code!\n",
+    "    else:\n",
+    "        print(\"Please answer with yes or no!\")\n",
+    "\n",
+    "elif False:  # exchane the False by a sensible boolean operation\n",
+    "    pass  # remove the pass and write your code!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Aufgabe 5 - Bessere Benutzereingabe\n",
+    "\n",
+    "In unserer ersten Variante des \"Engineering Flowcharts\" haben wir keine Routine eingebaut, die fehlerhafte Benutzereingaben abfängt und verarbeitet. \n",
+    "Das wollen wir verbessern!\n",
+    "Schreibe deshalb ein Programm, das den Benutzer immer wieder mit `input()` so lange auffordert, entweder \"yes\" oder \"no\" einzutippen, bis er eine gültige Eingabe getätigt hat. Zum Schluss soll die gültige Eingabe in der Variablen `inp` gespeichert werden.\n",
+    "> **Tipp:** Benutze eine `while`-Schleife!\n",
+    "> **Hinweis:** Wenn du ein laufendes Programm stoppen willst, klicke auf das quadratische Symbol (_Interrupt the kernel_) in der Menuleiste des Notebooks!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### DEINE LÖSUNG HIER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Aufgabe 6 - Verbessertes Flowchart\n",
+    "\n",
+    "Erweitere jetzt deinen Code aus Aufgabe 4 mit der Abfrage-Routine, die du in Aufgabe 5 entwickelt hast, um ein besseres Flowchart-Programm zu programmieren, dass nur die Eingaben \"yes\" und \"no\" akzeptiert."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Deine LÖSUNG HIER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Aufgabe 7 - das ULTIMATIVE Flowchart\n",
+    "\n",
+    "Dein Flowchart-Programm wächst und gedeiht! Jetzt kannst du noch ein weiteres Feature einbauen. Es wäre super praktisch, wenn nicht nur genau \"yes\" und \"no\", sondern auch ähnliche in großen oder gemischten Buchstaben akzeptiert werden. Also z.B. \"Yes\" oder \"NO\".\n",
+    "\n",
+    "> **Tipp:** Versuche nicht, alle möglichen Eingaben mit if-else-Anweisungen abzudecken. Schau dir lieber nochmal die String-Methoden aus Lektion 101 an und suche in der [offiziellen Python-Dokumentation](https://docs.python.org/3/library/stdtypes.html#string-methods) nach passenden Befehlen!. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### DEINE LÖSuNG HIER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "Du kannst jetzt Programme in Python schreiben, die dir etwas ausrechnen!\n",
+    "Allerdings wird der Code von komplexeren Programmen sehr schnell ziemlich unübersichtlich, wie du in Aufg. 6 und 7 bestimmt gemerkt hast!\n",
+    "Lerne in der nächsten Lektion, wie du Code als \"Bausteine\" deines Programms in _Funktionen_ verpackst, die deinen Code übersichtlicher und besser handhabbar machen. \n",
+    "Für viele Probleme gibt es schon Funktionen und du musst sie nur aus _Modulen_ laden.\n",
     "\n",
     "[Startseite](index.ipynb) | [**>> 103 - Funktionen und Module**](103%20-%20Funktionen%20und%20Module.ipynb)"
    ]
