--- a/103_Funktionen_und_Module.ipynb
+++ b/103_Funktionen_und_Module.ipynb
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aufgabe 1 - Mehr Primzahlen\n",
+    "### Aufgabe 1 - Mehr Primzahlen\n",
     "\n",
     "Definiere eine Funktion mit dem Namen `is_prime`, die eine Zahl annimmt und `True` zurückgibt wenn die Zahl eine Primzahl ist, bzw. `False` wenn nicht.\n",
     "\n",
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aufgabe 2 - Fakultät\n",
+    "### Aufgabe 2 - Fakultät\n",
     "\n",
     "Schreibe eine Funktion mit dem Namen `factorial`, die eine Zahl annimmt und die Fakultät `n! = n*(n-1)*...*3*2*1` dieser Zahl zurückgibt.\n",
     "\n",
@@ -417,13 +417,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Innerhalb der Funktion ist local_var bekannt und ihr Wert kann hier geprinted werden:\n",
+      "17\n",
+      "...aber ausserhalb der Funktion nicht\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'local_var' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-f23591ad439d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'...aber ausserhalb der Funktion nicht'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_var\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'local_var' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def do_something():\n",
-    "    local_var = 1 # Diese Variable ist innerhalb der Funktion definiert...\n",
-    "# ... und ist außerhalb nicht verfügbar:\n",
+    "    local_var = 17 # Diese Variable ist innerhalb der Funktion definiert...\n",
+    "    print('Innerhalb der Funktion ist local_var bekannt und ihr Wert kann hier geprinted werden:')\n",
+    "    print(local_var)\n",
+    "    \n",
+    "do_something()    \n",
+    "\n",
+    "print('...aber ausserhalb der Funktion nicht')\n",
     "print(local_var)"
    ]
   },
@@ -431,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Variablen, die zum Zeitpunkt des Funktionsaufrufs außerhalb der Funktion definiert sind, sind ebenfalls in der Funktion verfügbar (**_global scope_**):"
+    "Variablen, die zum Zeitpunkt außerhalb von Funktionen definiert wurden, werden **globale Variablen** genannt und sind auch innerhalb von Funktionen verfügbar (**_global scope_**):"
    ]
   },
   {
@@ -452,7 +478,7 @@
    ],
    "source": [
     "PI = 3.14 # Diese Variable ist global definiert...\n",
-    "# ...und kann innerhalb von Funktionen verwendet werden:\n",
+    "# ...und kann überall, also auch innerhalb von verschiedenen Funktionen verwendet werden:\n",
     "\n",
     "def degrees_to_radians(degrees):\n",
     "    return degrees / 180 * PI\n",
@@ -464,9 +490,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Verwende in Funktionen nur solche Variablen aus dem _global scope_, die während der Ausführung des Programms konstant bleiben.** Wenn die Funktion Input-Parameter benötigt solltest du sie der Funktion immer als Argumente übergeben.\n",
+    "**Achtung:** Hier ist die Reihenfolge der Definitionen wichtig! Eine globale Variable die in einer Funktion benutzt werden soll, muss bevor die Funktion aufgerufen wird (*nicht bevor die Funktion definiert wird*) definiert werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hier wird GLOBAL_VAR ausserhalb der Funktion geprinted:\n",
+      "12\n",
+      "Hier wird GLOBAL_VAR aus der Funktion heraus geprinted:\n",
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "GLOBAL_VAR = 12   # Hier definieren wir die globale Variable\n",
+    "print('Hier wird GLOBAL_VAR ausserhalb der Funktion geprinted:')\n",
+    "print(GLOBAL_VAR)\n",
     "\n",
-    "> Per Konvention schreiben wir Konstanten in Python in Großbuchstaben wie `PI`."
+    "# Hier definieren wir eine Funktion die die globale Variable benutzen wird sobald die Funktion ausgeführt wird\n",
+    "def print_global_var():\n",
+    "    print('Hier wird GLOBAL_VAR aus der Funktion heraus geprinted:')\n",
+    "    print(GLOBAL_VAR)\n",
+    "    \n",
+    "GLOBAL_VAR = 17   # Hier aendern wir den Wert der globalen Variable (um ein bisschen Verwirrung zu stifen)\n",
+    "\n",
+    "# Und jetz erst führen wir die Funktion aus\n",
+    "print_global_var()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aufgabe 3: Globale Variablen\n",
+    "\n",
+    "**a)** Überlege dir, ob du genau erklären kannst, warum welcher Wert von `GLOBAL_VAR` wo geprinted wird.\n",
+    "\n",
+    "**b)** Überlege dir, was passieren würde, wenn wir die Funktionsdefinition  `def print_global_var():` ganz nach oben in der Zelle verschieben würden.\n",
+    "\n",
+    "**c)** Überlege dir, was passieren würde, wenn wir die Funktionsdefinition  `def print_global_var():` ganz nach unten in der Zelle verschieben würden.\n",
+    "\n",
+    "**d)** Überlege dir, was passieren würde, wenn wir die Funktionsdefinition  `def print_global_var():` nach `GLOBAL_VAR = 17` verschieben würden.\n",
+    "\n",
+    "**e)** Überlege dir, was passieren würde, wenn wir den Funktionsaufruf `print_global_var()` vor `GLOBAL_VAR = 17` verschieben würden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hier kannst du deine Antworten von oben überprüfen\n",
+    "\n",
+    "# MODIFIZIERTER CODE HIER"
    ]
   },
   {
@@ -504,6 +588,63 @@
     "    print(a)\n",
     "show_var() # Hier wird die lokale Variable verwendet...\n",
     "print(a) # ... und hier die Globale."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Achtung!\n",
+    "\n",
+    "Bei der Verwendung von globalen Variablen ist Vorsicht geboten. Je länger der Code, desto schwieriger ist es den kompletten Überblick zu behalten, was welche Variable wo tut und wo sie wie verändert wird. \n",
+    "\n",
+    "### Aufgabe 4: Noch mehr globale Variablen\n",
+    "\n",
+    "Versuche, ohne den untenstehenden Code laufen zu lassen, vorherzusagen was nacheinander geprinted wird.\n",
+    "\n",
+    "```python\n",
+    "a = 42\n",
+    "b = 5\n",
+    "\n",
+    "def function1():\n",
+    "    b = 17\n",
+    "    print('a = {}'.format(a))\n",
+    "    print('b = {}'.format(a))\n",
+    "    \n",
+    "def function2():\n",
+    "    a = 42\n",
+    "    print('a = {}'.format(a))\n",
+    "    print('b = {}'.format(a))\n",
+    "\n",
+    "function2()    \n",
+    "    \n",
+    "print('a = {}'.format(a))\n",
+    "print('b = {}'.format(a))\n",
+    "\n",
+    "a = 13\n",
+    "\n",
+    "function1()\n",
+    "\n",
+    "print('a = {}'.format(a))\n",
+    "print('b = {}'.format(a))\n",
+    "\n",
+    "b = 13\n",
+    "a = 17\n",
+    "\n",
+    "function1()\n",
+    "function2()    \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Um genau diese potentielle Verwirrung zu vermeiden, werden globale Variablen so selten wie möglich genutzt!** Wenn die Funktion Input-Parameter benötigt solltest du sie der Funktion immer als Argumente übergeben. Wenn überhaupt, werden globale Variablen für Werte verwendet, die sich nie während des Programmablaufs ändern werden, z.B. physikalische oder mathematische Konstanten wie $\\pi$.\n",
+    "\n",
+    "> Per Konvention schreiben wir Konstanten die wir als globale Variablen programmieren in Großbuchstaben wie `PI`."
    ]
   },
   {
@@ -598,6 +739,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **Hinweis:** Diese Notation mit `name.funktions_name()` hast du auch schon bei den Objekten und deren Methoden gesehen (z.B. `dict.keys()`). Das sieht zwar gleich aus wie die Notation mit den Modulen, aber ist es ist nicht genau das Gleiche...Hier wird die Notation benutzt um klarzumachen aus welchem Modul wir eine Funktion benutzen. Also nicht verwirren lassen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Die `from`-`import`-Syntax ist insbesondere für mathematische Ausdrücke hilfreich, sodass wir das Modul nicht immer schreiben müssen:"
    ]
   },
@@ -681,7 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aufgabe 3 - Gaussian\n",
+    "### Aufgabe 5 - Gaussian\n",
     "\n",
     "Importiere die Funktionen `exp` aus `numpy` oder `math`.\n",
     "\n",
