Removed TODO and corrected flow chart...
... yes, it was indeed wrong!!! :(

--- a/102_controlflow.ipynb
+++ b/102_controlflow.ipynb
@@ -718,10 +718,10 @@
     "print(\"Engineering flowchart\")\n",
     "inp_1 = input(\"Does it move?\")\n",
     "\n",
-    "if inp_1 == \"yes\":\n",
+    "if inp_1 == \"no\":\n",
     "    inp_2 = input(\"Should it?\")\n",
     "    if inp_2 == \"no\":\n",
-    "        print(\"No Problem!\")\n",
+    "        print(\"No problem!\")\n",
     "    elif inp_2 == \"yes\":\n",
     "        pass  # remove the pass and write your own code!\n",
     "    else:\n",
@@ -749,9 +749,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -766,7 +763,7 @@
     "---\n",
     "## Aufgabe 6 - Verbessertes Flowchart\n",
     "\n",
-    "Erweitere jetzt deinen Code aus Aufgabe 4 mit der Abfrage-Routine, die du in Aufgabe 5 entwickelt hast, um ein besseres Flowchart-Programm zu programmieren, dass nur die Eingaben \"yes\" und \"no\" akzeptiert."
+    "Erweitere jetzt deinen Code aus Aufgabe 4 mit der Abfrage-Routine, die du in Aufgabe 5 entwickelt hast, um ein besseres Flowchart-Programm zu programmieren, dass nur die Eingaben \"yes\" und \"no\" akzeptiert"
    ]
   },
   {
@@ -810,24 +807,8 @@
     "Lerne in der nächsten Lektion, wie du Code als \"Bausteine\" deines Programms in _Funktionen_ verpackst, die deinen Code übersichtlicher und besser handhabbar machen. \n",
     "Für viele Probleme gibt es schon Funktionen und du musst sie nur aus _Modulen_ laden.\n",
     "\n",
-    "[Startseite](index.ipynb) | [**>> 103 - Funktionen und Module**](103%20-%20Funktionen%20und%20Module.ipynb)"
+    "[Startseite](index.ipynb) | [**>> 103 - Funktionen und Module**](103_Funktionen_und_Module.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TODO: Mehr übungsaufgaben für Control-Flow!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
