--- a/201_numerik_mit_numpy.ipynb
+++ b/201_numerik_mit_numpy.ipynb
@@ -459,7 +459,8 @@
      "points": 1,
      "schema_version": 1,
      "solution": false
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -479,7 +480,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) Erstelle die beiden Vektoren $\\vec{v} = (1, -2.5, 3)$ und $\\vec{w} = (2, 2, 1)$ als Numpy-Arrays.\n",
+    "c) Welche Form und welcher Datentyp hat folgendes Array? Speichere die Form und den Datentyp in den Variablen `array_shape` bzw. `array_dtype` ab."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "superconfusing = np.array(\n",
+    "    [[[[[0, 1]], [[2, 3]], [[4, 5]]]], [[[[6, 7]], [[8, 9]], [[10, 11]]]]]\n",
+    ")\n",
+    "\n",
+    "# DEINE LÖSUNG HIER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    array_shape\n",
+    "except NameError:\n",
+    "    raise NameError(\"Es gibt keine Variable 'array_shape'.\")\n",
+    "try:\n",
+    "    array_dtype\n",
+    "except NameError:\n",
+    "    raise NameError(\"Es gibt keine Variable 'array_dtype'.\")\n",
+    "assert array_shape == (2, 1, 3, 1, 2), \"Das superconfusing array hat eine andere Form!\"\n",
+    "assert array_dtype == \"int64\", \"Nope, das Array hat einen anderen Datentypen!\"\n",
+    "print(\"Super! Du hast dich NICHT verwirren lassen!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d) Erstelle ein Numpy-Array `foo`, das alle Zahlen von 0 bis einschließlich 23 enthält. Forme `foo` in ein zwei-dimensionales Array mit `reshape()` um. Die viele verschiedene Möglichkeiten gibt es dafür? Speichere die Anzahl in `num_possibilities` ab!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DEINE LÖSUNG HIER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    foo\n",
+    "except NameError:\n",
+    "    raise NameError(\n",
+    "        \"Es gibt keine Variable 'foo'. Weise das Array einer Variablen mit diesem Namen zu.\"\n",
+    "    )\n",
+    "try:\n",
+    "    num_possibilities\n",
+    "except NameError:\n",
+    "    raise NameError(\"Es gibt keine Variable 'num_possibilities'.\")\n",
+    "\n",
+    "from numpy.testing import assert_array_equal\n",
+    "\n",
+    "assert_array_equal(\n",
+    "    foo,\n",
+    "    np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23,]),  # fmt: skip\n",
+    ")\n",
+    "assert (\n",
+    "    num_possibilities == 8\n",
+    "), \"Leider falsch! Überlege nochmal genau. Veilleicht hast du ein paar Möglichkeiten vergessen?\"\n",
+    "print(\"Super gemacht!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e) Erstelle die beiden Vektoren $\\vec{v} = (1, -2.5, 3)$ und $\\vec{w} = (2, 2, 1)$ als Numpy-Arrays.\n",
     "Verrifiziere anschließend, dass die beiden Vektoren orthogonal sind!\n",
     "> **Hinweis:** Zwei Vektoren sind orthogonal, wenn ihr [_Skalarprodukt_](https://de.wikipedia.org/wiki/Skalarprodukt) (oder auf englisch: _dot-product_) null ist! Suche in der [Numpy Dokumentation](https://numpy.org/doc/stable/reference/routines.linalg.html) nach einer passenden Funktion und speichere das Ergebnis in der Variable `res`."
    ]
@@ -530,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "d) Die Flugbahn eines Volleyballs wird näherungsweise durch die Formel $h = -0.4 * x^2 + 2 * x + 1$ beschrieben, wobei $h$ die Höhe des Balls in Abhängigkeit von der Entfernung $x$ von der Spielerin (alle Einheiten in Meter) ist.\n",
+    "f) Die Flugbahn eines Volleyballs wird näherungsweise durch die Formel $h = -0.4 * x^2 + 2 * x + 1$ beschrieben, wobei $h$ die Höhe des Balls in Abhängigkeit von der Entfernung $x$ von der Spielerin (alle Einheiten in Meter) ist.\n",
     "1. Erstelle eine Funktion `trajectory(x)`, die als Argument die aktuelle $x$-Koordinate des Balls annimmt und die dazugehörige Höhe $h$ zurückgibt\n",
     "2. Erstelle ein Array `xs`, das die Zahlen von 0 bis 7 im Abstand von 0,5 enthält. Berechne für alle Werte in `xs` die dazugehörige Höhe und speichere sie im Array `hs` ab."
    ]
@@ -541,17 +626,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DEINE LÖSUING HIER\n",
-    "xs = np.arange(0.0, 7.1, 0.5)\n",
-    "\n",
-    "\n",
-    "def trajectory(x):\n",
-    "    return -0.4 * x**2 + 2 * x + 1\n",
-    "\n",
-    "\n",
-    "print(xs)\n",
-    "hs = trajectory(xs)\n",
-    "print(hs)"
+    "# DEINE LÖSUING HIER"
    ]
   },
   {
@@ -813,7 +888,7 @@
    "source": [
     "x = np.array([1, 1, 2, 3, 5, 8])\n",
     "### BEGIN SOLUTION\n",
-    "dx = x[1:] - x[:-1]\n",
+    "\n",
     "### END SOLUTION"
    ]
   },
@@ -862,7 +937,9 @@
     "Für alle Werte berechnen wir nun die Höhe mit der Funktion `trajectory()` von oben und speichern es in der Variablen `hs_highres` ab.\n",
     "Bestimme nun den Index des Werts, an dem die Höhe des Balls sein Vorzeichen wechselt (d.h. des kleinsten positiven Werts im Array).\n",
     "Speichere den Index in der Variablen `i_zero` ab. \n",
-    "Bestimme nun den x-Wert des Balls an dieser Stelle und speichere dein Ergebnis `x_zero` ab."
+    "Bestimme nun den x-Wert des Balls an dieser Stelle und speichere dein Ergebnis `x_zero` ab.\n",
+    "\n",
+    "> **Tipp:** Wie (fast) immer gibt es auch für diese Aufgabe hilfreiche numpy-Funktionen. Weiter oben im Tutorial haben wir eventuell schon nützliche Funktionen eingeführt. Und wenn dir das nicht weiterhelfen sollte, probiere `np. <TAB>` oder suche in der numpy-Dokumentation!"
    ]
   },
   {
@@ -999,6 +1076,20 @@
    "source": [
     "data = np.loadtxt(\"data/temperatures.txt\")\n",
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Hinweis:** Pfade zu Dateien werden in Python einfach als String angegeben. Der Schrägstrich `/` kennzeichnet dabei einen Ordner. Windows verwendet statt des `/` den Backslash. Das heißt also, dass sich das File `temperatures.txt` im Ordner `data` befindet.\n",
+    "\n",
+    "> **Gut zu wissen:** Es gibt zwei Arten, Pfade anzugeben: Absolute und relative.\n",
+    "\n",
+    "1) Bei _absolute Pfaden_ musst du immer den gesamten Pfad, sozusagen von der \"Wurzel\" des Dateibaumes bis zur eigentlichen Datei angeben. In Linux wäre das z.b. `/home/asterix/Documents/path/to/my/file.txt`. In Windows sowas wie: `C:\\Documents\\path\\to\\my\\file,txt`.\n",
+    "2) _Relative Pfade_ beziehen sich immer auf den Ort, an dem der Pythoncode ausgeführt wird (in unserem Fall, an dem das Jupyter-Notebook gespeichert ist). Das obige Beispiel `data/temperatures.txt` ist so ein relativer Pfad. Man erkennt das daran, dass er nicht mit einem `/` oder dem Laufwerksbuchstaben beginnt. Will man im Verzeichnisbaum \"nach oben\" (also Richtung Wurzel, d.h. ins \"Elternverzeichnis\") gehen, benutzt man zwei Punkte `..`. Richtig verwirrend, oder? \n",
+    "\n",
+    "**PS:** EBRAINS läuft auf einem Linux-Cluster!"
    ]
   },
   {
@@ -1239,11 +1330,9 @@
     "### END SOLUTION\n",
     "print(\"Jahr  |  Durchschnitt [°C]  |  Minimal [°C]  |  Maximal  [°C]\")\n",
     "for temps in yearly_temperatures:\n",
-    "    print(\n",
-    "        \"{}  |               {:03.2f}  |        {:6.2f}  |         {:6.2f}  \".format(\n",
-    "            *temps\n",
-    "        )\n",
-    "    )"
+    "    print(\"{}  |               {:6.2f}  |        {:6.2f}  |         {:6.2f}  \".format(*temps))  # fmt: skip\n",
+    "    # Die Zahlen in der Klammer {:6.2f} erlauben es, Zahlen mit .format() zu formattieren!\n",
+    "    # Wenn du mehr darüber wissen willst: https://pyformat.info/"
    ]
   },
   {
@@ -1301,11 +1390,7 @@
     "### END SOLUTION\n",
     "print(\"Monat |  Durchschnitt [°C]  |  Minimal [°C]  |  Maximal  [°C]\")\n",
     "for temps in monthly_temperatures:\n",
-    "    print(\n",
-    "        \"  {:02d}  |             {:6.2f}  |        {:6.2f}  |         {:6.2f}  \".format(\n",
-    "            *temps\n",
-    "        )\n",
-    "    )"
+    "    print(\"  {:02d}  |             {:6.2f}  |        {:6.2f}  |         {:6.2f}  \".format(*temps))  # fmt: skip"
    ]
   },
   {
@@ -1410,7 +1495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
